WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
309002
[Cocoa] NBA.com stuck without audio after muting/unmuting
https://bugs.webkit.org/show_bug.cgi?id=309002
Summary
[Cocoa] NBA.com stuck without audio after muting/unmuting
Jer Noble
Reported
2026-03-02 12:42:33 PST
[Cocoa] NBA.com stuck without audio after muting/unmuting
Attachments
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2026-03-02 12:42:34 PST
<
rdar://problem/171144607
>
Jer Noble
Comment 2
2026-03-02 12:45:25 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59734
EWS
Comment 3
2026-03-02 19:05:02 PST
Committed
308503@main
(4772927d7bc6): <
https://commits.webkit.org/308503@main
> Reviewed commits have been landed. Closing PR #59734 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug