[Cocoa] NBA.com stuck without audio after muting/unmuting rdar://171144607 https://bugs.webkit.org/show_bug.cgi?id=309002

Reviewed by Eric Carlson.

Update m_isAudible while setting the volume in addition to muted.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::setVolume):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateIsAudible):

Canonical link: https://commits.webkit.org/308503@main